--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres.eaidouaddkalspynsikh:prindingpyar354@aws-1-us-east-2.pooler.supabase.com:6543/postgres
+DATABASE_URL=postgresql://postgres.suboijptrnboebkkbwyh:prindingpyar354@aws-1-ap-south-1.pooler.supabase.com:5432/postgres
