fix: fix the frontend's page error

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres.suboijptrnboebkkbwyh:prindingpyar354@aws-1-ap-south-1.pooler.supabase.com:5432/postgres
+DATABASE_URL=postgresql://postgres:prindingpyar354@db.srxwguiypecwrrucnwyg.supabase.co:5432/postgres
