fix: fix the frontend's page error

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
-# API URL Configuration
-# Leave empty to use dynamic hostname detection
-# Or set to backend URL for production deployment
-NEXT_PUBLIC_API_URL=
+# API URL - leave empty to use dynamic hostname detection
+# NEXT_PUBLIC_API_URL=http://localhost:8000/api
+
+# For production, set this to your backend API URL:
+# NEXT_PUBLIC_API_URL=https://your-domain.com/api
