--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
 # Database Configuration
-# Supabase PostgreSQL connection string
-DATABASE_URL=postgresql://username:password@host:port/database
+# PostgreSQL connection string for Supabase or local database
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+
+# Example for Supabase:
+# DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@db.xxxxx.supabase.co:5432/postgres
+
+# Example for local PostgreSQL:
+# DATABASE_URL=postgresql://postgres:password@localhost:5432/absensi_db
